feat: audio type detection, #4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,14 @@
     "cSpell.words": [
         "Decryptor",
         "ekey",
+        "Framesync",
+        "ftyp",
+        "fytp",
+        "isom",
         "Kugou",
         "Kuwo",
+        "MSNV",
+        "NDAS",
         "Netease",
         "qtag",
         "ximalaya",
